--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -7,6 +7,7 @@ import { Image } from "astro:assets";
 import profileImage from "./image-1.png";
 
 <Image
+  quality="max"
   src={profileImage}
   alt="Mohamed's profile picture"
   height={600}
