--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -8,8 +8,9 @@ import profileImage from "./image-1.png";
 
 <Image
   quality="high"
+  densities={[1.5, 2]}
   src={profileImage}
-  alt="Mohamed's profile picture"
+  alt="Me and my dog, Noodle"
   height={600}
   className="aspect-auto rounded-md"
 />
