--- a/src/pages/projects/index.mdx
+++ b/src/pages/projects/index.mdx
@@ -3,6 +3,8 @@ layout: ../../layouts/ProjectsLayout.astro
 title: "Projects"
 ---
 
+export const prerender = true;
+
 import { Image } from "astro:assets";
 import tribeFinder from "./CleanShot 2024-09-17 at 11 .19.11@2x.png";
 import topcastsScreenshot1 from "./CleanShot 2024-09-17 at 11 .21.52@2x.png";
