--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -3,6 +3,8 @@ layout: ../../layouts/AboutLayout.astro
 title: "About"
 ---
 
+export const prerender = true;
+
 import { Image } from "astro:assets";
 import profileImage from "./image-1.png";
 
