--- a/src/pages/talks.mdx
+++ b/src/pages/talks.mdx
@@ -3,6 +3,8 @@ layout: ../layouts/AboutLayout.astro
 title: "Talks"
 ---
 
+export const prerender = true;
+
 - **Effective front-end testing: how to confidently deploy on a Friday**: given at React Berlin meetup, 2019. [See slides](https://speakerdeck.com/mohamed3on/effective-testing-how-to-confidently-deploy-on-a-friday).
 
 - **Optional Chaining operator**: given at React Berlin meetup, 2018. [See slides](https://speakerdeck.com/mohamed3on/the-optional-chaining-operator).
