feat: integrate latest

--- a/src/pages/projects/index.mdx
+++ b/src/pages/projects/index.mdx
@@ -16,7 +16,7 @@ import topcastsScreenshot2 from "./CleanShot 2024-09-17 at 11 .22.15@2x.png";
 
 Tribe Finder is a chrome extension that helps you find where people in your (Twitter) network live. To me, this helps answer the question: "Where should I live if I want to be surrounded by people I admire?".
 
-You can try it out on [Tribe Finder](https://tribefinder.app/) and read more about it [here](../posts/tribe-finder).
+You can try it out on [Tribe Finder](https://tribefinder.app/) and read more about it [here](../tribe-finder).
 
 ### Topcasts
 
