--- a/src/content/blog/supabase-nextjs-google-oauth/index.mdx
+++ b/src/content/blog/supabase-nextjs-google-oauth/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How to add Google OAuth to your Supabase Next.js App Router app"
-pubDatetime: 2025-03-28
-description: "A comprehensive guide to adding Supabase Google OAuth in Next.js (App Router) with dynamic origins, wildcards, and environment considerations."
+pubDatetime: 2025-04-03
+description: "A guide to adding Supabase Google auth in Next.js (App Router) including the common pitfalls and how to fix them."
 tags: ["supabase", "nextjs", "auth", "tech"]
 ---
 
