add my experience

--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -8,6 +8,8 @@ import GlossaryTerm from "@components/GlossaryTermWrapper.astro";
 
 The USA still pays software engineers 2-3x more than anywhere else. But if you're not American, your visa dictates your entire life.
 
+I've been trying to migrate to the US for years while working in Germany. The contrast is stark: I moved to Germany with just a job offer - two months later, I was there. When I got laid off, I had 8 months of unemployment benefits, healthcare covered, zero deportation worries. The US? Every visa option is a nightmare of restrictions, lottery systems, and the constant threat of having to leave.
+
 ## Your Visa Options (And Why They Matter More Than You Think)
 
 ### H1B: The $100K Lottery Ticket Nobody Can Afford
@@ -132,6 +134,8 @@ The student visa hack is more important than ever:
 **Europe Pros:** €200 childcare, 5+ weeks vacation, job security, walkable cities, easier immigration
 
 **Europe Cons:** Lower salaries, slower career growth, higher taxes, less cutting-edge work
+
+The tradeoffs are real. In Germany, I never worried about deportation or healthcare. But making real money? Nearly impossible unless you already have it. Buying a home on a salary alone? Forget it. The career ceiling is much lower. In the US, the potential is massive - but so is the stress.
 
 Who should actually move?
 - Singles under 30 willing to grind
