Revamped the visa section with fresh insights and cut the fluff. Added some real talk about O1 and L1 pipelines, plus updated the action plan for 2025.

--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -23,9 +23,9 @@ The H1B used to be the go-to visa for engineers. With [85,000 spots](https://www
 
 > [!NOTE]
 > - [$100,000 one-time fee per petition](https://www.washingtonpost.com/politics/2025/09/19/trump-h1b-visa-fee-immigration/)
-> - [FY2026 registrations dropped 26.9%](https://goelite.com/blogs/h-1b-visa-lottery-2026-fy-results-out-odds-changes)
-> - Lottery odds were [~29% in FY2025](https://www.wsmimmigration.com/immigration-law-insights/2024/uscis-releases-fy-2025-h-1b-registration-statistics/) (before fee)
-> - First-year cost: ~$300-400k total (fee + salary + legal)
+> - Plus $5-10k in legal fees
+> - Lottery odds were [~29% in FY2025](https://www.wsmimmigration.com/immigration-law-insights/2024/uscis-releases-fy-2025-h-1b-registration-statistics/) (before the fee)
+> - Companies are already pulling out of H1B sponsorship
 
 If you're worth $100k+ in visa fees, you're likely already O1-eligible - and O1 is cheaper ($6-25k) with no lottery. The H1B is essentially dead for new applicants.
 
@@ -42,18 +42,12 @@ Takes 2-6 months with <GlossaryTerm term="Premium Processing" definition="Pay ex
 Most engineers need 4-6 years experience with 2-3 years focused portfolio building.
 
 > [!WARNING]
-> O1 doesn't guarantee green card eligibility. India faces 11-12 year waits (EB-2: Jan 2014), China is backlogged, while EU/Rest of World remains current. Timeline: 2-10+ years depending on nationality.
-
-> [!NOTE]
-> - $300k in NYC = [$110k elsewhere after childcare](https://www.techcities.app/salary-converter?baseCity=valencia&targetCity=new-york&kids=1)
-> - 60 days to find new job if laid off (180-day proposal still pending)
-> - <GlossaryTerm term="COBRA" definition="Allows you to continue employer health insurance after job loss, but you pay the full premium">COBRA</GlossaryTerm>: $850-$2k/month for family coverage
-> - Startup salaries ≠ job security
+> **O1 → Green Card Reality**: Having O1 doesn't guarantee green card approval. You need to meet EB-1A's higher bar (same criteria but stricter review, ~76% approval rate in 2024). Plus: 60 days to find new job if laid off, spouse can't work on O-3, and <GlossaryTerm term="COBRA" definition="Allows you to continue employer health insurance after job loss, but you pay the full premium">COBRA</GlossaryTerm> costs $850-$2k/month.
 
 Best for: Senior engineers with FAANG offers or startup equity who are cool with not knowing where they'll be in 5-10 years.
 
 
-### L1: The Corporate Fast Lane That Actually Works Now
+### L1: The Corporate Fast Lane
 
 The [L1 visa](https://www.uscis.gov/working-in-the-united-states/temporary-workers/l-1a-intracompany-transferee-executive-or-manager) allows multinational companies to transfer employees to their US offices. With H1B out of reach, L1 is now the most reliable way in for most engineers.
 
@@ -61,19 +55,11 @@ You need 1+ years with the company outside the US, and they need US operations. 
 
 **L1A** gets you faster green card track (<GlossaryTerm term="EB1C" definition="Fast-track green card category for multinational executives/managers">EB1C</GlossaryTerm>) but requires genuine managerial duties. **L1B** faces more scrutiny from <GlossaryTerm term="USCIS" definition="US Citizenship and Immigration Services - the agency that processes visas">USCIS</GlossaryTerm>. Both start with 3 years, extendable to 5 years (L1B) or 7 years (L1A).
 
-**L1 Trade-offs:**
-- **Golden handcuffs**: Stuck with one company (but guaranteed, no lottery)
-- **Pay**: Lower comp since you can't leave
-- **Unaffected**: No $100k fee like H1B
+The trade-off is simple: you're stuck with one company (golden handcuffs) and typically get lower comp since you can't leave. But no lottery, no massive fees.
 
-> [!NOTE]
-> The reality is most hot AI startups are SF-based and require in-office work - OpenAI, Anthropic, Cursor, Perplexity, CodeRabbit, Replit, Cognition, Cline, Notion. If you want to work on cutting-edge AI, you likely need to be in the US.
->
-> **L1 transfer options**: Google, Meta, Microsoft, Amazon have offices in London, Dublin, Zurich, Toronto - work there first, then transfer after 12 months.
->
-> **Remote-first sponsors**: Some companies like Vercel, Linear, ElevenLabs hire remotely first, then sponsor if you prove yourself. But pre-Series B companies typically use contractors/EOR which don't count for L1.
+Companies actively creating L1 pipelines include Google, Meta, Microsoft, Amazon (offices in London, Dublin, Zurich, Toronto - work there 12 months then transfer). Some like Vercel and Linear hire remotely first, then sponsor. But pre-Series B companies typically use contractors/EOR which don't count for L1.
 
-Companies are now actively creating L1 pipelines:
+Here's how the L1 pipeline works:
 
 1. Hire you in their London/Toronto/Dublin office
 2. Work there for 12 months
@@ -141,31 +127,45 @@ Who should actually move?
 - Singles under 30 willing to grind
 - L1 transfers (spouse can work)
 - Making $400k+ (visa costs become negligible)
-- Must be in-person at cutting edge (AI labs, etc.)
+- Must be in-person at cutting-edge AI
 
 ### Remote vs. Moving
 
-[A $100k remote job in Portugal beats a $250-300k visa-dependent job in NYC](https://www.techcities.app/salary-converter?baseCity=porto&targetCity=new-york) when you factor in visa stress, childcare costs, and quality of life.
+A [$100k remote job in Portugal beats a $250-300k visa-dependent job in NYC](https://www.techcities.app/salary-converter?baseCity=porto&targetCity=new-york) when factoring in visa stress, childcare ($2-4k/month), and single-income pressure. In NYC, that $300k becomes [$110k after childcare](https://www.techcities.app/salary-converter?baseCity=valencia&targetCity=new-york&kids=1).
 
 Remote works better for mid-level engineers, families needing dual income, offers under $300k with dependents.
 
 
 ## Your Action Plan (2025)
 
+### Companies to Target
+
+**AI companies** (mostly SF-based, in-office):
+- OpenAI, Anthropic (limited Europe hiring)
+- Cursor, Perplexity, CodeRabbit, Replit, Cognition, Cline, Notion (US-only)
+
+**L1-friendly** (have global offices):
+- Google, Meta, Microsoft, Amazon, Apple
+- Work in London/Dublin/Zurich/Toronto → transfer after 12 months
+
+**Remote-first sponsors**:
+- Vercel, Linear, ElevenLabs, PostHog, Supabase
+- Hire remotely first, then sponsor if you prove yourself
+
+### Next Steps
+
 **Outside the US:**
-1. Target companies that hire remotely then sponsor
-2. Consider Canada/Europe for L1 pipeline
+Target L1-friendly companies or build O1 portfolio. Consider Canada/Europe offices for transfers.
 
 **On OPT/STEM-OPT:**
-1. Find L1 sponsor or build O1 portfolio
-2. Network relentlessly
+Find L1 sponsor or build O1 portfolio while networking relentlessly.
 
 **Already on H1B:**
 Your visa is gold - start green card process immediately
 
 ## Tools to Help You Decide
 
-Before making any big move, run the numbers. I built [TechCities.app](https://www.techcities.app/) to help software engineers compare 120+ cities worldwide on metrics that actually matter: purchasing power, safety, salaries, cost of living, weather, and more.
+Before making any big move, run the numbers. I built [Tech Cities Index](https://www.techcities.app/) to help software engineers compare 120+ cities worldwide on metrics that actually matter: purchasing power, safety, salaries, cost of living, weather, and more.
 
 The [salary converter](https://www.techcities.app/salary-converter) shows exactly what salary you'd need in another city to maintain your quality of life. You might be surprised that $100k in Lisbon often beats $300k in San Francisco once you factor in childcare, housing, and visa stress.
 
