--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -8,7 +8,7 @@ import GlossaryTerm from "@components/GlossaryTermWrapper.astro";
 
 The USA still pays software engineers 2-3x more than anywhere else. But if you're not American, your visa dictates your entire life.
 
-I've been trying to migrate to the US for years while working in Germany. The contrast is stark: I moved to Germany with just a job offer - two months later, I was there. When I got laid off, I had 8 months of unemployment benefits, healthcare covered, zero deportation worries. The US? Every visa option is a nightmare of restrictions, lottery systems, and the constant threat of having to leave.
+I've been trying to migrate to the US for years while working in Germany. The contrast is stark: I moved to Germany with just a job offer - two months later, I was there. When I left my job at Affirm, I had 8 months of unemployment benefits, healthcare covered, zero deportation worries. The US? Every visa option is a nightmare of restrictions, lottery systems, and the constant threat of having to leave.
 
 ## Your Visa Options (And Why They Matter More Than You Think)
 
