Updated the visa section with some no-bullshit advice on building that O1 portfolio. Also trimmed down the L1 sponsor talk to keep it real. Let's get those visas sorted, folks!

--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -95,7 +95,7 @@ Here's how the L1 pipeline works:
 The student visa hack is more important than ever:
 
 - **Timeline**: [3 years to work](https://day1cpt.org/news/understanding-the-h-1b-visa-lottery-odds-and-changes-for-2025-fy) (1 year <GlossaryTerm term="OPT" definition="Optional Practical Training - 12-month work authorization after graduation">OPT</GlossaryTerm> + 2 years <GlossaryTerm term="STEM-OPT" definition="Additional 24-month extension for science/tech/engineering/math degree holders">STEM extension</GlossaryTerm>)
-- **The play**: Use those 3 years to build your O1 portfolio or find an L1 sponsor
+- **The play**: Use those 3 years to build your O1 portfolio - you can't get L1 while in the US
 - **Success rate**: Guaranteed work authorization beats playing the lottery
 
 
@@ -126,7 +126,7 @@ The tradeoffs are real. In Germany, I never worried about deportation or healthc
 Who should actually move?
 - Singles under 30 willing to grind
 - L1 transfers (spouse can work)
-- Making $400k+ (visa costs become negligible)
+- Making $400k+
 - Must be in-person at cutting-edge AI
 
 ### Remote vs. Moving
@@ -158,7 +158,7 @@ Remote works better for mid-level engineers, families needing dual income, offer
 Target L1-friendly companies or build O1 portfolio. Consider Canada/Europe offices for transfers.
 
 **On OPT/STEM-OPT:**
-Find L1 sponsor or build O1 portfolio while networking relentlessly.
+Build O1 portfolio aggressively - you have 3 years max. Target companies that sponsor O1 or can offer H1B if you're worth the $100k fee.
 
 **Already on H1B:**
 Your visa is gold - start green card process immediately
