Streamlined the visa section

--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -22,12 +22,11 @@ I've been trying to migrate to the US for years while working in Germany. The co
 The H1B used to be the go-to visa for engineers. With [85,000 spots](https://www.uscis.gov/working-in-the-united-states/temporary-workers/h-1b-specialty-occupations/h-1b-electronic-registration-process) and the new fee, only the absolute highest-paid positions make economic sense.
 
 > [!NOTE]
-> - [$100,000 one-time fee per petition](https://www.washingtonpost.com/politics/2025/09/19/trump-h1b-visa-fee-immigration/)
-> - Plus $5-10k in legal fees
-> - Lottery odds were [~29% in FY2025](https://www.wsmimmigration.com/immigration-law-insights/2024/uscis-releases-fy-2025-h-1b-registration-statistics/) (before the fee)
+> - [$100,000 one-time fee per petition](https://www.washingtonpost.com/politics/2025/09/19/trump-h1b-visa-fee-immigration/) + $5-10k legal
+> - Lottery odds: [~29% in FY2025](https://www.wsmimmigration.com/immigration-law-insights/2024/uscis-releases-fy-2025-h-1b-registration-statistics/) (before the fee killed it)
 > - Companies are already pulling out of H1B sponsorship
 
-If you're worth $100k+ in visa fees, you're likely already O1-eligible - and O1 is cheaper ($6-25k) with no lottery. The H1B is essentially dead for new applicants.
+If you're worth the fee, you're likely O1-eligible anyway. The H1B is dead.
 
 ### O1: The 'Extraordinary' Visa That's Now Your Best Bet
 
@@ -57,7 +56,7 @@ You need 1+ years with the company outside the US, and they need US operations. 
 
 The trade-off is simple: you're stuck with one company (golden handcuffs) and typically get lower comp since you can't leave. But no lottery, no massive fees.
 
-Companies actively creating L1 pipelines include Google, Meta, Microsoft, Amazon (offices in London, Dublin, Zurich, Toronto - work there 12 months then transfer). Some like Vercel and Linear hire remotely first, then sponsor. But pre-Series B companies typically use contractors/EOR which don't count for L1.
+Major companies (Google, Meta, Microsoft, Amazon) have L1 pipelines through their London/Dublin/Zurich/Toronto offices. Pre-Series B companies typically use contractors/EOR which don't count for L1.
 
 Here's how the L1 pipeline works:
 
@@ -115,7 +114,7 @@ The student visa hack is more important than ever:
 
 **US Pros:** Higher salaries, cutting-edge tech, great healthcare (with job), dynamic career growth, SF/NYC are walkable
 
-**US Cons:** $2-4k/month childcare, limited PTO (2-3 weeks typical), visa stress, most cities car-dependent (except SF/NYC/Boston)
+**US Cons:** Expensive childcare, limited PTO (2-3 weeks), visa stress, most cities car-dependent
 
 **Europe Pros:** €200 childcare, 5+ weeks vacation, job security, walkable cities, easier immigration
 
@@ -131,9 +130,9 @@ Who should actually move?
 
 ### Remote vs. Moving
 
-A [$100k remote job in Portugal beats a $250-300k visa-dependent job in NYC](https://www.techcities.app/salary-converter?baseCity=porto&targetCity=new-york) when factoring in visa stress, childcare ($2-4k/month), and single-income pressure. In NYC, that $300k becomes [$110k after childcare](https://www.techcities.app/salary-converter?baseCity=valencia&targetCity=new-york&kids=1).
+A [$100k remote job in Portugal can beat a $250-300k visa-dependent job in NYC](https://www.techcities.app/salary-converter?baseCity=porto&targetCity=new-york). That NYC salary becomes ~$110k after childcare and single-income pressure.
 
-Remote works better for mid-level engineers, families needing dual income, offers under $300k with dependents.
+Remote works better for mid-level engineers, families needing dual income, or anyone with offers under $300k and dependents.
 
 
 ## Your Action Plan (2025)
@@ -144,13 +143,10 @@ Remote works better for mid-level engineers, families needing dual income, offer
 - OpenAI, Anthropic (limited Europe hiring)
 - Cursor, Perplexity, CodeRabbit, Replit, Cognition, Cline, Notion (US-only)
 
-**L1-friendly** (have global offices):
-- Google, Meta, Microsoft, Amazon, Apple
-- Work in London/Dublin/Zurich/Toronto → transfer after 12 months
+**L1-friendly**: Google, Meta, Microsoft, Amazon, Apple (global offices)
 
-**Remote-first sponsors**:
-- Vercel, Linear, ElevenLabs, PostHog, Supabase
-- Hire remotely first, then sponsor if you prove yourself
+**Remote-first sponsors**: Vercel, Linear, ElevenLabs, PostHog, Supabase
+Smart strategy: Work remotely first to prove yourself - companies are much more likely to sponsor visas for proven performers than unknown candidates.
 
 ### Next Steps
 
@@ -158,7 +154,7 @@ Remote works better for mid-level engineers, families needing dual income, offer
 Target L1-friendly companies or build O1 portfolio. Consider Canada/Europe offices for transfers.
 
 **On OPT/STEM-OPT:**
-Build O1 portfolio aggressively - you have 3 years max. Target companies that sponsor O1 or can offer H1B if you're worth the $100k fee.
+Build O1 portfolio aggressively - you have 3 years max.
 
 **Already on H1B:**
 Your visa is gold - start green card process immediately
@@ -171,4 +167,10 @@ The [salary converter](https://www.techcities.app/salary-converter) shows exactl
 
 ## The Bottom Line
 
-The US still has the money and opportunities. With H1B dead, you need O1, L1, or remote work. Pick based on what matters: money, stability, or life outside work.
+The US still has the money and opportunities. With H1B dead, you need O1, L1, or remote work.
+
+Many startups offer $150-250k which isn't amazing if you have kids and your spouse can't work (O1). Yes, you'll get equity, but you're betting everything on that lottery ticket. Use the [salary calculator](https://www.techcities.app/salary-converter) to find your minimum acceptable offer based on your current income.
+
+But remember: even a mediocre initial offer at a good startup can be a stepping stone. Being in the US means access to the network, the competition for talent, and the ability to grow your income fast. Remote workers miss out on this.
+
+Pick based on what matters: immediate money, long-term potential, stability, or life outside work.
