Added my personal saga of trying to move to the US

--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -6,9 +6,11 @@ description: "Exploring USA visa options for software engineers in 2025, and the
 import "remark-github-blockquote-alert/alert.css";
 import GlossaryTerm from "@components/GlossaryTermWrapper.astro";
 
-The USA still pays software engineers 2-3x more than anywhere else. But if you're not American, your visa dictates your entire life.
+I'm a staff engineer in Germany who's been trying to migrate to the US for years. The US still pays 2-3x more than anywhere else, but if you're not American, your visa dictates your entire life.
 
-I've been trying to migrate to the US for years while working in Germany. The contrast is stark: I moved to Germany with just a job offer - two months later, I was there. When I left my job at Affirm, I had 8 months of unemployment benefits, healthcare covered, zero deportation worries. The US? Every visa option is a nightmare of restrictions, lottery systems, and the constant threat of having to leave.
+When I moved to Germany, it was simple: job offer, two months later I'm there. When I left my job, I had 8 months of unemployment benefits, healthcare covered, zero deportation worries.
+
+The US? Every visa option is a nightmare. If you've never had to worry about visas before, the US immigration system will shock you with how restrictive it is. 60 days to find a new job or you're out. Your spouse might not be able to work. One layoff can end everything.
 
 ## Your Visa Options (And Why They Matter More Than You Think)
 
@@ -26,7 +28,7 @@ The H1B used to be the go-to visa for engineers. With [85,000 spots](https://www
 > - Lottery odds: [~29% in FY2025](https://www.wsmimmigration.com/immigration-law-insights/2024/uscis-releases-fy-2025-h-1b-registration-statistics/) (before the fee killed it)
 > - Companies are already pulling out of H1B sponsorship
 
-If you're worth the fee, you're likely O1-eligible anyway. The H1B is dead.
+Here's the thing: if a company thinks you're worth $100k in visa fees, you probably qualify for O1 anyway. The H1B is dead.
 
 ### O1: The 'Extraordinary' Visa That's Now Your Best Bet
 
@@ -120,7 +122,9 @@ The student visa hack is more important than ever:
 
 **Europe Cons:** Lower salaries, slower career growth, higher taxes, less cutting-edge work
 
-The tradeoffs are real. In Germany, I never worried about deportation or healthcare. But making real money? Nearly impossible unless you already have it. Buying a home on a salary alone? Forget it. The career ceiling is much lower. In the US, the potential is massive - but so is the stress.
+The tradeoffs are real. In Germany, I never worry about deportation or healthcare. But buying a home on an engineer's salary? Impossible. The career ceiling is much lower, growth is slower. You're choosing between HelloFresh, Delivery Hero, and Zalando in Berlin - that's basically it.
+
+Meanwhile in the US, you have hundreds of companies competing for talent, actual equity upside, and 2-3x the salary. But you're always one layoff away from having to leave the country.
 
 Who should actually move?
 - Singles under 30 willing to grind
