Spiced up the bottom line with some real talk about US salaries and the hidden costs of living here.

--- a/src/content/blog/is-moving-to-usa-worth-it/index.mdx
+++ b/src/content/blog/is-moving-to-usa-worth-it/index.mdx
@@ -171,10 +171,12 @@ The [salary converter](https://www.techcities.app/salary-converter) shows exactl
 
 ## The Bottom Line
 
-The US still has the money and opportunities. With H1B dead, you need O1, L1, or remote work.
+Look, if you can make it work, the US is still where the opportunities are. With H1B dead, you need O1, L1, or remote work.
 
-Many startups offer $150-250k which isn't amazing if you have kids and your spouse can't work (O1). Yes, you'll get equity, but you're betting everything on that lottery ticket. Use the [salary calculator](https://www.techcities.app/salary-converter) to find your minimum acceptable offer based on your current income.
+Here's what most people get wrong: many startups offer $150-250k which sounds amazing. But if you have kids and your spouse can't work (O1)? After $2-4k/month childcare and single income pressure, that $250k in NYC is more like $110k in real purchasing power. Yes, you'll get equity, but you're betting everything on that lottery ticket.
 
-But remember: even a mediocre initial offer at a good startup can be a stepping stone. Being in the US means access to the network, the competition for talent, and the ability to grow your income fast. Remote workers miss out on this.
+Use the [salary calculator](https://www.techcities.app/salary-converter) to find YOUR minimum acceptable offer. Don't just take any US offer because the gross salary looks good.
 
-Pick based on what matters: immediate money, long-term potential, stability, or life outside work.
+But also remember: even a mediocre initial offer at a good startup can be a stepping stone. Being there gives you access to the network and rapid income growth that remote workers miss.
+
+It's not the end of the world if you can't make it happen though. In Europe, you still have good healthcare, affordable childcare, walkable cities, and you can actually sleep at night without visa stress. The US dream is worth pursuing if you can swing it, but life in Europe isn't exactly suffering either.
